--- a/backend-coin/service/service_oss/src/main/resources/application.properties
+++ b/backend-coin/service/service_oss/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=dev
 #阿里云 OSS
 #不同的服务器，地址不同
 aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI4GAqjQyD7PgxLt5cF6Lf
-aliyun.oss.file.keysecret=Q7iZhv9Wg2coeuGg1qFHeL13shUmFw
+aliyun.oss.file.keyid=******
+aliyun.oss.file.keysecret=*****
 #bucket可以在控制台创建，也可以使用java代码创建
 aliyun.oss.file.bucketname=heap-coin
