--- a/backend-coin/service/service_users/src/main/resources/application.properties
+++ b/backend-coin/service/service_users/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=service-users
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://8.140.145.144:3306/coin?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/coin?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 
